<resources>
    <string name="app_name">LocationTracker</string>
    <string name="default_host_name">location-server-9x.herokuapp.com</string>
    <string name="user_name">Enter User Name</string>
    <string name="host_name">Enter Host Name</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="reset">Reset</string>
    <string name="txt_host">Host:</string>
    <string name="txt_username">Username:</string>
</resources>
